--- a/ponto/static/css/livre.css
+++ b/ponto/static/css/livre.css
@@ -3,7 +3,6 @@
 * {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 30px;
-
     margin: 0px;
     padding: 0px;
     user-select: none;
@@ -131,25 +130,13 @@ h2 {
     border: none;
     user-select: none;
 }
-footer p {
-    font-size: 15px;
-    text-align: center;
-    padding: 10px;
-}
-footer {
-    background-color: whitesmoke;
-    border-radius: 10px;
-}
-
-#clock {
+#relogio {
     width: 7vw;
     height: 7vw;
 }
 #containerData {
     text-align: center;
 }
-
-/* ------------------------------------- */
 #todo {
     margin: auto;
     padding: 20px;
@@ -174,12 +161,19 @@ footer {
     justify-content: center;
     align-items: center;
 }
-
-/* ------------------------------------- */
 #containerPersonBadge, #containerBookmark {
     margin: 5vw;
 }
 #person_badge, #bookmark {
     display: block;
     margin: auto;
+}
+footer p {
+    font-size: 15px;
+    text-align: center;
+    padding: 10px;
+}
+footer {
+    background-color: whitesmoke;
+    border-radius: 10px;
 }
