--- a/ponto/static/css/livre.css
+++ b/ponto/static/css/livre.css
@@ -15,7 +15,7 @@
     -webkit-appearance: none;
     margin: 0;
 }
-body, html {
+body {
     background-color: white;
     width: 100vw;
     height: 100vh;
@@ -29,7 +29,7 @@ main {
     display: block;
     margin: auto;
     width: 30vw;
-    padding: 10px;
+    /* padding: 10vw; */
 }
 aside {
     width: 50vw;
@@ -47,10 +47,11 @@ aside {
 }
 h1, h2 {
     text-align: center;
-    margin: 15px 0px;
+    padding: 5px;
+    margin: 0px 0px 10px;
 }
 h1 {
-    color: rgb(0, 0, 152);
+    color: #0E3F6A;
     font-size: 2vw;
 }
 h2 {
@@ -113,6 +114,7 @@ h2 {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    font-size: 50px;
 }
 #backspace:hover {
     background-color: gold;
@@ -162,7 +164,7 @@ h2 {
     align-items: center;
 }
 #containerPersonBadge, #containerBookmark {
-    margin: 5vw;
+    margin: 3vw;
 }
 #person_badge, #bookmark {
     display: block;
