--- a/ponto/templates/ponto/livre.html
+++ b/ponto/templates/ponto/livre.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS Local -->
-    <link rel="stylesheet" href="{% static "css/livre.css" %}">
-    <!-- Google Fonts -->
+    <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Controle de Ponto</title>
 </head>
@@ -17,8 +15,8 @@
             <h1>PONTO ELETRÔNICO</h1>
         
             <label for="digiteMatricula"><h2>Digite sua matrícula</h2></label>
-            <div id="container-matricula">
-                <input type="number" id="digiteMatricula" autocomplete="off" required>
+            <div id="containerMatricula">
+                <input type="number" name="matricula" id="digiteMatricula" autocomplete="off" required>
                 <button id="login"><img id="logar" src="{% static 'img/login.png' %}"></button>
             </div>            
             
@@ -43,14 +41,14 @@
 
         <aside>
             <img src="{% static 'img/logoIpanguacu.png' %}" id="logoIpanguacu">
-            <p id="livre"><img src="{% static 'img/arrow-bar-right 1.png' %}">LIVRE</p>
+            <p id="livre"><img src="{% static 'img/arrow.png' %}">LIVRE</p>
             <div id="todo">
                 <div id="tempo">
                     <img src="{% static 'img/relogio.png' %}" id="relogio">
-                    <p id="hourParagraph" class="timeParagraph"> <!--RECEBE AS HORAS NO (XH XXMIN)--></p>
+                    <p id="hourParagraph" class="timeParagraph"><!--RECEBE AS HORAS NO (XH XXMIN)--></p>
                 </div>
             </div>
-            <p id="containerData" class="timeParagraph"> <!--RECEBE A DATA (DIA DA SEMANA, DIA, MÊS, ANO)--></p>
+            <p id="containerData" class="timeParagraph"><!--RECEBE A DATA (DIA DA SEMANA, DIA, MÊS, ANO)--></p>
             <div id="containerPersonBadge">
                 <img src="{% static 'img/person-badge.png' %}" id="person_badge">
                 <div id="containerBookmark">
@@ -60,10 +58,10 @@
         </aside>
     </main>
     <!-- SCRIPTS -->
-    <script src="{% static 'scripts/horas.js' %}"></script>
     <script src="{% static 'scripts/dia.js' %}"></script>
+    <script src="{% static 'scripts/horas.js' %}"></script>
+    <script src="{% static 'scripts/aprov.js' %}"></script>
     <script src="{% static 'scripts/anoAtual.js' %}"></script>
     <script src="{% static 'scripts/tecladoNumerico.js' %}"></script>
-    <script src="{% static 'scripts/aprov.js' %}"></script>
 </body>
 </html>
