--- a/ponto/templates/ponto/entrada.html
+++ b/ponto/templates/ponto/entrada.html
@@ -7,15 +7,53 @@
     <link rel="stylesheet" href="{% static "css/style.css" %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Controle de Ponto</title>
+    <style>
+        #livre {
+            background-color: #0E3F6A;
+        }
+        #hourParagraph {
+            color: #0E3F6A;
+        }
+        #containerPersonBadge {
+            display: flex;
+            margin: 60px;
+            align-items: center;
+            justify-content: center;
+        }
+        #funcionario {
+            width: 24vw;
+            display: block;
+            color: gray;
+            justify-content: center;
+            text-align: center;
+        }
+        p.usuario {
+            font-size: 3.5vw;
+            font-weight: bold;
+        }
+        p.funcao {
+            font-size: 2vw;
+        }
+        #person_badge {
+            margin: 1px;
+            filter: grayscale(100%);
+        }
+        #footerImg {
+            display: block;
+            margin: auto;
+        }
+        footer {
+            background: none;
+        }
+    </style>
 </head>
 <body>
     <main>
-        <form action="{% static "page/entrada.html" %}" method="post" id="formulario">
-            {% csrf_token %}
+        <form action="page/saida.html" method="post" id="formulario">
             <h1>PONTO ELETRÔNICO</h1>
-            <label for="digiteMatricula"><h2>Digite sua matrícula</h2></label>
+            <label for="digiteMatricula"><h2>Digite sua senha</h2></label>
             <div id="containerMatricula">
-                <input type="number" name="matricula" id="digiteMatricula" autocomplete="off" required>
+                <input type="number" name="senha" id="digiteMatricula" autocomplete="off" required>
                 <button id="login"><img id="logar" src="{% static 'img/login.png' %}"></button>
             </div>            
             <div id="numeros">
@@ -33,24 +71,28 @@
                 <input type="button" value="⌫" id="backspace">
             </div>
             <footer>
-                <p>DESENVOLVIDO POR Gm Tech <br> <strong id="anoAtual"><!--RECEBE O ANO ATUAL--></strong></p>
+                 <img src="{% static 'img/logoIpanguacu.png' %}" id="footerImg">
             </footer>
         </form>
         <aside>
             <img src="{% static 'img/logoIpanguacu.png' %}" id="logoIpanguacu">
-            <p id="livre"><img src="{% static 'img/arrow.png' %}">LIVRE</p>
+            <p id="livre"><img src="{% static 'img/arrow.png' %}">ENTRADA</p>
             <div id="todo">
                 <div id="tempo">
                     <img src="{% static 'img/relogio.png' %}" id="relogio">
-                    <p id="hourParagraph" class="timeParagraph"><!--RECEBE AS HORAS NO (XH XXMIN)--></p>
+                    <p id="hourParagraph" class="timeParagraph"> <!--RECEBE AS HORAS NO (XH XXMIN)--></p>
                 </div>
             </div>
-            <p id="containerData" class="timeParagraph"><!--RECEBE A DATA (DIA DA SEMANA, DIA, MÊS, ANO)--></p>
+            <p id="containerData" class="timeParagraph"> <!--RECEBE A DATA (DIA DA SEMANA, DIA, MÊS, ANO)--></p>
             <div id="containerPersonBadge">
                 <img src="{% static 'img/person-badge.png' %}" id="person_badge">
-                <div id="containerBookmark">
-                    <img src="{% static 'img/bookmark.png' %}" id="bookmark">
+                <div id="funcionario">
+                    <p class="usuario">Paulo Henrique Felipe Fagundes</p>
+                    <p class="funcao">Desenvolvedor de Software</p>
                 </div>
+            </div>
+            <div id="containerBookmark">
+                <img src="{% static 'img/predio.png' %}" id="bookmark">
             </div>
         </aside>
     </main>
