--- a/ponto/templates/livre.html
+++ b/ponto/templates/livre.html
@@ -1,22 +1,22 @@
+{% extends "base/base.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
+
+
+{% block style %}
+    <link rel="stylesheet" href="{% static "ponto/css/style.css" %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <title>Controle de Ponto</title>
-</head>
-<body>
-    <main>
+{% endblock style %}
+
+{% block main %}
+
+ <main>
         <form action="{% static "page/entrada.html" %}" method="post" id="formulario">
             {% csrf_token %}
             <h1>PONTO ELETRÔNICO</h1>
             <label for="digiteMatricula"><h2>Digite sua matrícula</h2></label>
             <div id="containerMatricula">
                 <input type="number" name="matricula" id="digiteMatricula" autocomplete="off" required>
-                <button id="login"><img id="logar" src="{% static 'img/login.png' %}"></button>
+                <button id="login"><img id="logar" src="{% static 'ponto/img/login.png' %}"></button>
             </div>            
             <div id="numeros">
                 <input type="button" class="tecladoNumerico" value="1" id="numeroUm">
@@ -37,28 +37,35 @@
             </footer>
         </form>
         <aside>
-            <img src="{% static 'img/logoIpanguacu.png' %}" id="logoIpanguacu">
-            <p id="livre"><img src="{% static 'img/arrow.png' %}">LIVRE</p>
+            <img src="{% static 'ponto/img/logoIpanguacu.png' %}" id="logoIpanguacu">
+            <p id="livre"><img src="{% static 'ponto/img/arrow.png' %}">LIVRE</p>
             <div id="todo">
                 <div id="tempo">
-                    <img src="{% static 'img/relogio.png' %}" id="relogio">
+                    <img src="{% static 'ponto/img/relogio.png' %}" id="relogio">
                     <p id="hourParagraph" class="timeParagraph"><!--RECEBE AS HORAS NO (XH XXMIN)--></p>
                 </div>
             </div>
             <p id="containerData" class="timeParagraph"><!--RECEBE A DATA (DIA DA SEMANA, DIA, MÊS, ANO)--></p>
             <div id="containerPersonBadge">
-                <img src="{% static 'img/person-badge.png' %}" id="person_badge">
+                <img src="{% static 'ponto/img/person-badge.png' %}" id="person_badge">
                 <div id="containerBookmark">
-                    <img src="{% static 'img/bookmark.png' %}" id="bookmark">
+                    <img src="{% static 'ponto/img/bookmark.png' %}" id="bookmark">
                 </div>
             </div>
         </aside>
     </main>
-    <!-- SCRIPTS -->
-    <script src="{% static 'scripts/dia.js' %}"></script>
-    <script src="{% static 'scripts/horas.js' %}"></script>
-    <script src="{% static 'scripts/aprov.js' %}"></script>
-    <script src="{% static 'scripts/anoAtual.js' %}"></script>
-    <script src="{% static 'scripts/tecladoNumerico.js' %}"></script>
-</body>
-</html>
+
+{% endblock main %}
+
+{% block script %}
+    <script src="{% static 'ponto/js/dia.js' %}"></script>
+    <script src="{% static 'ponto/js/horas.js' %}"></script>
+    <script src="{% static 'ponto/js/aprov.js' %}"></script>
+    <script src="{% static 'ponto/js/anoAtual.js' %}"></script>
+    <script src="{% static 'ponto/js/tecladoNumerico.js' %}"></script>
+
+{% endblock script %}
+
+
+
+
