--- a/ponto/templates/livre.html
+++ b/ponto/templates/livre.html
@@ -10,14 +10,16 @@
 {% block main %}
 
  <main>
-        <form action="{% static "page/entrada.html" %}" method="post" id="formulario">
+        <form action="{% url "entrada" %}" method="POST" id="formulario" >
             {% csrf_token %}
             <h1>PONTO ELETRÔNICO</h1>
             <label for="digiteMatricula"><h2>Digite sua matrícula</h2></label>
             <div id="containerMatricula">
                 <input type="number" name="matricula" id="digiteMatricula" autocomplete="off" required>
-                <button id="login"><img id="logar" src="{% static 'ponto/img/login.png' %}"></button>
+                <button id="login" type='submit'><img id="logar" src="{% static 'ponto/img/login.png' %}"></button>
+              
             </div>            
+        </form>
             <div id="numeros">
                 <input type="button" class="tecladoNumerico" value="1" id="numeroUm">
                 <input type="button" class="tecladoNumerico" value="2" id="numeroDois">
@@ -60,7 +62,7 @@
 {% block script %}
     <script src="{% static 'ponto/js/dia.js' %}"></script>
     <script src="{% static 'ponto/js/horas.js' %}"></script>
-    <script src="{% static 'ponto/js/aprov.js' %}"></script>
+    {% comment %} <script src="{% static 'ponto/js/aprov.js' %}"></script> {% endcomment %}
     <script src="{% static 'ponto/js/anoAtual.js' %}"></script>
     <script src="{% static 'ponto/js/tecladoNumerico.js' %}"></script>
 
