--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    {% block style %}
-    
-    
-    {% endblock style %}
+    {% block style %} {% endblock style %}
 
     <title>Controle de Ponto</title>
 </head>
