feat: resolvido conflito

--- a/ponto/templates/entrada.html
+++ b/ponto/templates/entrada.html
@@ -47,8 +47,8 @@
             <div id="containerPersonBadge">
                 <img src="../img/person-badge.png" id="person_badge">
                 <div id="funcionario">
-                    <p class="usuario">Paulo Henrique Felipe Fagundes</p>
-                    <p class="funcao">Desenvolvedor de Software</p>
+                    <p class="usuario">{{nome}}</p>
+                    <p class="funcao">{{instrutor}}</p>
                 </div>
             </div>
             <div id="containerBookmark">
